--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run
       env:
-        secret: ${{ secrets.SECRET }}
+        secret: ${{ SECRET }}
       run: |
         python secrets.py
