--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment: "Secrets environment"
 
     steps:
     - uses: actions/checkout@v3
@@ -29,6 +30,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run
       env:
-        secret: ${{ SECRET }}
+        secret: ${{ secrets.SECRET }}
       run: |
         python secrets.py
