--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    environment: "Secrets environment"
+    environment: production
 
     steps:
     - uses: actions/checkout@v3
