--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run
       env:
-        secret: ${{ secrets.SECRET }}
+        secret: ${{ SECRET }}
+        envvar: ${{ ENV_VARIABLE}}
       run: |
         python secrets.py
